# cpuminer

./: .gitignore  CMakeLists.txt  CMakePresets.json  COMPILATION_CHECK.md  Makefile.am  Makefile.manual  Makefile.simple  Makefile.test  PROJECT_STRUCTURE.md  README.md  README_CMAKE.md  README_RANDOMQ.md  build.sh  compile_test.sh  config.conf  config.cpp  config.h  configure.ac  cpu-miner.c  diagnose.c  final_cleanup.sh  install_dependencies_linux.sh  main.cpp  miner.cpp  miner.h  randomq.c  randomq.h  randomq_hash.c  randomq_hash.cpp  randomq_hash.h  randomq_miner.cpp  randomq_miner.h  randomq_mining.c  randomq_mining.cpp  randomq_mining.h  rpc_client.cpp  rpc_client.h  test_compile.c  test_functions.c  test_minimal.c  (+3 more)
